Profile Editing Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,35 @@
     <string name="status_not_email">Not a Correct Email</string>
     <string name="egypt_banks_test">EGYPT BANKS TEST</string>
     <string name="you_already_signed_in">You Are Already Logged In</string>
+    <string name="welcome_guest">Welcome Guest!</string>
+    <string name="about_me">About Me</string>
+    <string name="experience">Experience</string>
+    <string name="name_title">Name:</string>
+    <string name="about_me_title">About Me: </string>
+    <string name="experience_title">Experience: </string>
+    <string name="edit">Edit</string>
+    <string name="education">Education</string>
+    <string name="education_title">Education:</string>
+    <string name="skills">Skills</string>
+    <string name="skills_title">Skills:</string>
+    <string name="certifications">Certifications</string>
+    <string name="certifications_title">Certifications:</string>
+    <string name="courses_title">Courses:</string>
+    <string name="courses">Courses</string>
+    <string name="language">Language</string>
+    <string name="language_title">Languages:</string>
+    <string name="birth_date">Birth Date</string>
+    <string name="birth_date_title">Birth Date:</string>
+    <string name="nationality">Nationality</string>
+    <string name="nationality_title">Nationality:</string>
+    <string name="phone">Phone</string>
+    <string name="phone_title">Phone:</string>
+    <string name="mobile_title">Mobile:</string>
+    <string name="mobile">Mobile</string>
+    <string name="address_title">Address:</string>
+    <string name="address">Address</string>
+    <string name="more_info_title">More Information:</string>
+    <string name="more_info">More Information</string>
+    <string name="make_it_perfect">Make It Perfect</string>
+    <string name="update_your_profile_and_details">Update Your Profile And Details</string>
 </resources>
