--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="your_result_is">Your Result is:</string>
+    <string name="modify_your_profile_have_one">Hello, You can\'t modify your profile until you have one :)\n Click here to sign up </string>
 </resources>
